--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,10 @@ dependencies {
 
     androidTestCompile('com.android.support:recyclerview-v7:25.3.1')
 
+    testCompile ('com.squareup.okhttp:mockwebserver:2.7.0')
+    testCompile('com.squareup.okio:okio:1.13.0')
 
+    testCompile('com.android.support.test:runner:0.2') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
 }
