--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.janus.stocktracker.view.PortfolioActivity" />
+        <activity android:name="com.example.janus.stocktracker.view.StockSearchActivity" />
+        <activity android:name="com.example.janus.stocktracker.view.StockQuoteActivity" />
     </application>
 
 </manifest>
