--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
     }
 
     buildTypes {
+
+        all {
+            buildConfigField ("String", "BASEURL", '"https://api.iextrading.com"')
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
