--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
     defaultConfig {
         applicationId "com.example.janus.stocktracker"
         minSdkVersion 21
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -13,6 +14,9 @@ android {
     }
 
     buildTypes {
+        all {
+            buildConfigField ("String", "APIKEY", System.getenv("ALPHA_VANTAGE_APIKEY"))
+        }
 
         release {
             minifyEnabled false
