Update error handling to conform to the Alpha Vantage API.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     buildTypes {
         all {
-            buildConfigField ("String", "APIKEY", System.getenv("ALPHA_VANTAGE_APIKEY"))
+            buildConfigField ("String", "APIKEY", "\"${System.getenv("ALPHA_VANTAGE_APIKEY")}\"")
         }
 
         release {
